# real-car-adas-monitor

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  generate_obd_data.py
docs/: architecture.md
docs/doxygen/html/: annotated.html  annotated_dup.js  class_d_m_s_h_u_d-members.html  class_d_m_s_h_u_d.html  class_d_m_s_h_u_d.js  class_d_m_s_monitor-members.html  class_d_m_s_monitor.html  class_dashboard-members.html  class_dashboard.html  class_dashboard.js  class_o_b_d_parser-members.html  class_o_b_d_parser.html  class_o_b_d_parser.js  class_o_n_n_x_classifier-members.html  class_o_n_n_x_classifier.html  class_o_n_n_x_classifier.js  classes.html  dashboard_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dms__hud_8h_source.html  dms__monitor_8h_source.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  navtreedata.js  navtreeindex0.js  obd__parser_8h_source.html  onnx__classifier_8h_source.html  shared__state_8h_source.html  struct_classification_result-members.html  struct_classification_result.html  struct_dashboard_data-members.html  struct_dashboard_data.html  struct_driver_state-members.html  struct_driver_state.html  struct_o_b_d_record-members.html  struct_o_b_d_record.html  struct_shared_state-members.html  (+1 more)
models/: driver_classifier.onnx.data  normalization_params.json
src/: dashboard.cpp  dashboard.h  dms_hud.cpp  dms_hud.h  dms_monitor.cpp  dms_monitor.h  main.cpp  obd_parser.cpp  obd_parser.h  onnx_classifier.cpp  onnx_classifier.h  shared_state.h
tests/: test_obd_parser.cpp
(+28 files in other folders)
